--- a/index.html
+++ b/index.html
@@ -538,8 +538,8 @@
     <div class="skills-grid">
 
         <div class="skill-item">
-            <img src="mg/cpp_logo.png" alt="VS Code Logo">
-            <p>c++</p>
+            <img src="img/cpp_logo.png" alt="VS Code Logo">
+            <p>C++</p>
         </div>
 
         <div class="skill-item">
