--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
     <div class="skills-grid">
 
         <div class="skill-item">
-            <img src="img/cpp_logo.png" alt="VS Code Logo">
+            <img src="img/cpp_logo.png" alt="C++">
             <p>C++</p>
         </div>
 
