--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ozora Portfolio V5</title>
+<title>Web Ozora Portfolio</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
@@ -331,7 +331,7 @@ section{
     </div>
 
     <div class="profile-wrapper">
-    <img src="weF.jpeg" class="profile-img">
+    <img src="img/weF.jpeg" class="profile-img">
     </div>
 
 </div>
@@ -382,7 +382,7 @@ section{
 
     <div class="card hidden edu-card">
         <h2>
-    <img src="nus.png" class="edu-icon">
+    <img src="img/nus.png" class="edu-icon">
 </h2>
         <h2>BINUS University</h2>
         <p>S1 - Computer Science</p>
@@ -391,7 +391,7 @@ section{
 
     <div class="card hidden edu-card">
         <h2>
-    <img src="budimulia.png" class="edu-icon">
+    <img src="img/budimulia.png" class="edu-icon">
 </h2>
         <h2>SMA BUDI MULIA PEMATANGSIANTAR</h2>
         <p>Jurusan IPA</p>
@@ -408,42 +408,42 @@ section{
 <div class="grid">
 
     <div class="card hidden skill-card">
-        <img src="html.jpeg" class="skill-img">
+        <img src="img/html.jpeg" class="skill-img">
         <h3>HTML</h3>
     </div>
 
     <div class="card hidden skill-card">
-        <img src="ss.jpeg" class="skill-img">
+        <img src="img/ss.jpeg" class="skill-img">
         <h3>CSS</h3>
     </div>
 
     <div class="card hidden skill-card">
-        <img src="vscode.jpeg" class="skill-img">
+        <img src="img/vscode.jpeg" class="skill-img">
         <h3>Visual Studio</h3>
     </div>
 
     <div class="card hidden skill-card">
-        <img src="python.jpeg" class="skill-img">
+        <img src="img/python.jpeg" class="skill-img">
         <h3>Python</h3>
     </div>
 
     <div class="card hidden skill-card">
-        <img src="cpp_logo.png" class="skill-img">
+        <img src="img/cpp_logo.png" class="skill-img">
         <h3>C++</h3>
     </div>
 
     <div class="card hidden skill-card">
-        <img src="canva.jpeg" class="skill-img">
+        <img src="img/canva.jpeg" class="skill-img">
         <h3>Canva</h3>
     </div>
 
     <div class="card hidden skill-card">
-        <img src="word.jpeg" class="skill-img">
+        <img src="img/word.jpeg" class="skill-img">
         <h3>Microsoft Word</h3>
     </div>
 
     <div class="card hidden skill-card">
-        <img src="excel.jpeg" class="skill-img">
+        <img src="img/excel.jpeg" class="skill-img">
         <h3>Microsoft Excel</h3>
     </div>
 
@@ -456,11 +456,11 @@ section{
 
 <div class="grid">
 
-<div class="card hidden exp-card" onclick="openModal('blu.jpeg')">
+<div class="card hidden exp-card" onclick="openModal('img/blu.jpeg')">
 blu Ambassador of Binus University 2025
 </div>
 
-<div class="card hidden exp-card" onclick="openModal('blu.jpeg')">
+<div class="card hidden exp-card" onclick="openModal('img/blu.jpeg')">
 3rd Rector Cup Band Binus University 2025
 </div>
 
@@ -468,11 +468,11 @@ blu Ambassador of Binus University 2025
 3rd Futsal Burn Cup Binus @BEKASI 2025
 </div>
 
-<div class="card hidden exp-card" onclick="openModal('wefest.jpeg')">
+<div class="card hidden exp-card" onclick="openModal('img/wefest.jpeg')">
 Performer WeFest Inauguration BINUS University 2025
 </div>
 
-<div class="card hidden exp-card" onclick="openModal('images/talentfest.jpg')">
+<div class="card hidden exp-card">
 Committee of Student Talent Fest BINUS University 2025
 </div>
 
@@ -489,15 +489,15 @@ Committee of Student Talent Fest BINUS University 2025
 <section id="certificates">
 <h1 class="hidden">Certificates</h1>
 <div class="grid">
-<div class="card hidden"><img src="bgdc.jpeg" width="100%"></div>
-<div class="card hidden"><img src="dicoding.jpeg" width="100%"></div>
-<div class="card hidden"><img src="burncup.jpeg" width="100%"></div>
-<div class="card hidden"><img src="python.png" width="100%"></div>
-<div class="card hidden"><img src="Screenshot 2026-02-26 215103.png" width="100%"></div>
-<div class="card hidden"><img src="kpk.jpeg" width="100%"></div>
-<div class="card hidden"><img src="bslc.jpeg" width="100%"></div>
-<div class="card hidden"><img src="ekno.jpeg" width="100%"></div>
-<div class="card hidden"><img src="multimedia.png" width="100%"></div>
+<div class="card hidden"><img src="img/bgdc.jpeg" width="100%"></div>
+<div class="card hidden"><img src="img/dicoding.jpeg" width="100%"></div>
+<div class="card hidden"><img src="img/burncup.jpeg" width="100%"></div>
+<div class="card hidden"><img src="img/python.png" width="100%"></div>
+<div class="card hidden"><img src="img/Screenshot 2026-02-26 215103.png" width="100%"></div>
+<div class="card hidden"><img src="img/kpk.jpeg" width="100%"></div>
+<div class="card hidden"><img src="imgbslc.jpeg" width="100%"></div>
+<div class="card hidden"><img src="img/ekno.jpeg" width="100%"></div>
+<div class="card hidden"><img src="img/multimedia.png" width="100%"></div>
 </div>
 </section>
 
