--- a/index.html
+++ b/index.html
@@ -730,11 +730,11 @@ textarea {
     Committee of Student Talent Fest BINUS University 2025
     </div>
 
-     <div class="card hidden exp-card" onclick="openModal('img/wefe.jpeg')">
+     <div class="card hidden exp-card">
     Best Keyboardist 2024 - 2025 Budi Mulia 
     </div>
 
-     <div class="card hidden exp-card" onclick="openModal('img/wefe.jpeg')">
+     <div class="card hidden exp-card">
     3rd Sultan Agung Music Competition Pematangsiantar 2025
     </div>
 
@@ -756,35 +756,35 @@ textarea {
 </div>
 
      <div class="card hidden">
-    <img src="img/burncup.jpeg" width="100%" onclick="openModal('img/dicoding.jpeg')">
+    <img src="img/burncup.jpeg" width="100%" onclick="openModal('img/burncup.jpeg')">
 </div>
 
      <div class="card hidden">
-    <img src="img/python.png" width="100%" onclick="openModal('img/dicoding.jpeg')">
+    <img src="img/python.png" width="100%" onclick="openModal('img/python.png')">
 </div>
 
      <div class="card hidden">
-    <img src="img/Screenshot 2026-02-26 215103.png" width="100%" onclick="openModal('img/dicoding.jpeg')">
+    <img src="img/Screenshot 2026-02-26 215103.png" width="100%" onclick="openModal('Screenshot 2026-02-26 215103.png')">
 </div>
 
      <div class="card hidden">
-    <img src="img/kpk.jpeg" width="100%" onclick="openModal('img/dicoding.jpeg')">
+    <img src="img/kpk.jpeg" width="100%" onclick="openModal('img/kpk.jpeg')">
 </div>
 
      <div class="card hidden">
-    <img src="img/bslc.jpeg" width="100%" onclick="openModal('img/dicoding.jpeg')">
+    <img src="img/bslc.jpeg" width="100%" onclick="openModal('img/bslc.jpeg')">
 </div>
 
      <div class="card hidden">
-    <img src="img/ekno.jpeg" width="100%" onclick="openModal('img/dicoding.jpeg')">
+    <img src="img/ekno.jpeg" width="100%" onclick="openModal('img/ekno.jpeg')">
 </div>
 
      <div class="card hidden">
-    <img src="img/coding.jpeg" width="100%" onclick="openModal('img/dicoding.jpeg')">
+    <img src="img/coding.jpeg" width="100%" onclick="openModal('img/coding.jpeg')">
 </div>
 
      <div class="card hidden">
-    <img src="img/multimedia.png" width="100%" onclick="openModal('img/dicoding.jpeg')">
+    <img src="img/multimedia.png" width="100%" onclick="openModal('img/multimedia.jpeg')">
 </div>
 
     </section>
